# pyiBook

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
pyiBook/: __init__.py  commands.py  display.py  poccess.py
src/pyiBook/: __init__.py  commands.py
