[project]
name = "pyiBook"
version = "1.0.0"
authors = [
  { name="Tess", email="bingting01@outlook.com" },
]
license = {file = "LICENSE"}
description = "A CLI tool for interacting with iBooks library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
]
dependencies = ['Click',
                'rich',
                'pandas',
                'requests',
                'openpyxl']
[project.urls]
Homepage = "https://github.com/higher-bottle/pyiBook"
Issues = "https://github.com/higher-bottle/pyiBook/issues"

[project.scripts]
pyiBook = "pyiBook.commands:cli"