[metadata]
name = pyiBook
version = 0.1
author = Tess
author_email = BingTing01@outlook.com
description = A CLI tool for interacting with iBooks library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/higher-bottle/pyiBook
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    Click
    rich
    pandas
    openpyxl
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyiBook = pyiBook.__init__:cli